feat: add full screen palette view

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently \"npx json-server ./db/db.json --port=4000\" \"next dev\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,13 +12,19 @@
     "@fontsource-variable/montserrat": "^5.1.0",
     "@heroicons/react": "^2.1.5",
     "@nextui-org/button": "^2.0.38",
+    "@nextui-org/input": "^2.2.5",
+    "@nextui-org/modal": "^2.0.41",
     "@nextui-org/react": "^2.4.8",
     "@nextui-org/system": "^2.2.6",
     "@nextui-org/theme": "^2.2.11",
+    "@tanstack/react-query": "^5.56.2",
     "clsx": "^2.1.1",
     "framer-motion": "^11.9.0",
+    "json-server": "^1.0.0-beta.3",
+    "ky": "^1.7.2",
     "next": "14.2.13",
     "react": "^18",
+    "react-color-palette": "^7.3.0",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2"
   },
@@ -26,6 +32,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "concurrently": "^9.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
