--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^11.9.0",
     "json-server": "^1.0.0-beta.3",
     "ky": "^1.7.2",
+    "nanoid": "^5.0.7",
     "next": "14.2.13",
     "react": "^18",
     "react-color-palette": "^7.3.0",
