--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fontsource-variable/montserrat": "^5.1.0",
     "@heroicons/react": "^2.1.5",
     "@nextui-org/button": "^2.0.38",
+    "@nextui-org/dropdown": "^2.1.31",
     "@nextui-org/input": "^2.2.5",
     "@nextui-org/modal": "^2.0.41",
     "@nextui-org/react": "^2.4.8",
@@ -28,7 +29,8 @@
     "react": "^18",
     "react-color-palette": "^7.3.0",
     "react-dom": "^18",
-    "tailwind-merge": "^2.5.2"
+    "tailwind-merge": "^2.5.2",
+    "use-long-press": "^3.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
