feat: add ai palette feature from header

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ky": "^1.7.2",
     "nanoid": "^5.0.7",
     "next": "14.2.13",
+    "openai": "^4.67.3",
     "react": "^18",
     "react-color-palette": "^7.3.0",
     "react-dom": "^18",
