--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-dom": "^18",
     "react-responsive": "^10.0.0",
     "tailwind-merge": "^2.5.2",
-    "use-long-press": "^3.2.0"
+    "use-long-press": "^3.2.0",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
