--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nextui-org/dropdown": "^2.1.31",
     "@nextui-org/input": "^2.2.5",
     "@nextui-org/modal": "^2.0.41",
+    "@nextui-org/popover": "^2.1.29",
     "@nextui-org/react": "^2.4.8",
     "@nextui-org/skeleton": "^2.0.32",
     "@nextui-org/system": "^2.2.6",
